capstone-qnet-data-quality/k8s/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qnet-platform
  labels:
    app.kubernetes.io/instance: qnet-capstone
    app.kubernetes.io/part-of: qnet-data-quality
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/quality
            pathType: Prefix
            backend:
              service:
                name: qnet-quality
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qnet-gateway
                port:
                  name: http
